test/testdata/syntax_errors/unterminated_string.lox
// syntaxerror
// error: unterminated string literal
print "aaaa;
print 1; // this shouldn't be printed
